fix: stops page from snapping left when scrollbar is enabled

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,6 +46,7 @@ body {
 html, body {
   height: 100%;
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
 select {
